Add all parts of landing, no functionalities

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Loanppi</string>
+    <string name="landing_text">Invierte. Espera. Cobra.</string>
+    <string name="btn_works">¿Cómo funciona?</string>
+    <string name="btn_signUp">Regístrate</string>
+    <string name="btn_login">Inicia sesión</string>
+    <string name="Loanppi_logo">Loanppi Logo</string>
 </resources>
