--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Loanppi</string>
-    <string name="landing_text">Invierte. Espera. Cobra.</string>
+    <string name="landing_text">Unos invierten.\nOtros trabajan.\nTodos ganan.</string>
     <string name="btn_works">¿Cómo funciona?</string>
     <string name="btn_signUp">Regístrate</string>
     <string name="btn_login">Inicia sesión</string>
