--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
+    // General
     <string name="app_name">Loanppi</string>
-    <string name="landing_text">Unos invierten.\nOtros trabajan.\nTodos ganan.</string>
-    <string name="btn_works">¿Cómo funciona?</string>
+    <string name="Loanppi_logo">Loanppi Logo</string>
+
+    // Landing view
     <string name="btn_signUp">Regístrate</string>
     <string name="btn_login">Inicia sesión</string>
-    <string name="Loanppi_logo">Loanppi Logo</string>
 
     // Signup view
     <string name="signup_title">Registro</string>
+    <string name="btn_facebook">Facebook</string>
+    <string name="btn_google">Google</string>
+    <string name="btn_investor">Soy inversor</string>
+    <string name="btn_worker">Soy trabajador</string>
+    <string name="signup_subtitle">Regístrate con:</string>
 </resources>
