Delete all landscape views and fix some styles

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="btn_investor">Soy inversor</string>
     <string name="btn_worker">Soy trabajador</string>
     <string name="signup_subtitle">Regístrate con:</string>
+    <string name="back">&lt;</string>
 
     // Login view
     <string name="login_title">Inicio de sesión</string>
