Fix my investment and my loan

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -66,7 +66,12 @@
         <item>Renovar tecnomecánica</item>
         <item>Reparación de vehículo</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    // Invest
+    <string-array name="time_to_return">
+        <item>¿En cuánto tiempo quiere el retorno?</item>
+        <item>6 meses</item>
+        <item>12 meses</item>
+    </string-array>
 
 </resources>
