--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -11,10 +11,12 @@
     <string name="signup_title">Registro</string>
     <string name="btn_facebook">Facebook</string>
     <string name="btn_google">Google</string>
-    <string name="btn_investor">Soy inversor</string>
-    <string name="btn_worker">Soy trabajador</string>
-    <string name="signup_subtitle">Regístrate con:</string>
+    <string name="btn_rappi">Rappi</string>
+    <string name="btn_investor">Inversor</string>
+    <string name="btn_worker">Trabajador</string>
+    <string name="register_with">Regístrate con</string>
     <string name="back">&lt;</string>
+    <string name="choose_role">Seleccione un perfil</string>
 
     // Login view
     <string name="login_title">Inicio de sesión</string>
@@ -44,7 +46,7 @@
     <string name="second_name">Segundo nombre</string>
     <string name="first_last_name">Primer apellido</string>
     <string name="second_last_name">Segundo apellido</string>
-    <string name="document_number">Número</string>
+    <string name="document_number">Identificación</string>
     <string name="contact_info">Información de contacto</string>
     <string name="phone_number">Número celular</string>
     <string name="email">Correo electrónico</string>
