--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -38,7 +38,12 @@
     <string name="txt_your_fee_number">Esta es tu cuota número:</string>
     <string name="txt_amount_remaining">Te falta por pagar:</string>
     <string name="txt_getting_money">Estamos consiguiendo tu dinero</string>
-    <string name="btn_let_play">Pagar</string>
+    <string name="btn_let_pay">Pagar</string>
+
+    // Payment
+    <string name="investment_title">Hacer un pago</string>
+    <string name="txt_payment_amount_paid">Has pagado:</string>
+    <string name="txt_amount_to_pay">Cantidad a pagar</string>
 
     // Main investor
     <string name="no_invests">Ánimate a ayudar a muchas personas\nHaz una inversión</string>
