--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -101,5 +101,5 @@
     <string name="txt_lend">Prestar</string>
     <string name="txt_my_loan">Mi préstamo</string>
     <string name="txt_invest">Invertir</string>
-    <string name="txt_my_investments">Inversiones</string>
+    <string name="txt_my_investments">Mis inversiones</string>
 </resources>
