--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="investment_title">Hacer un pago</string>
     <string name="txt_payment_amount_paid">Has pagado:</string>
     <string name="txt_amount_to_pay">Cantidad a pagar</string>
+    <string name="loan_paid">¡Felicidades!\nHas terminado de pagar tu préstamo.</string>
 
     // Main investor
     <string name="sub_earns">Balance</string>
